@@ -34,7 +34,8 @@ public:
         IconRole = Qt::UserRole + 1,
         DescriptionRole = Qt::UserRole + 2,
         ActionRole = Qt::UserRole + 3,
-        StatusRole = Qt::UserRole + 4
+        StatusRole = Qt::UserRole + 4,
+        SupportRole = Qt::UserRole + 5
     };
     explicit PackageModel(QObject *parent = 0);
     ~PackageModel();
